(feat/i18n) : add translation to arrow shortcut in the Launcher

--- a/src/components/Launcher/Launcher.astro
+++ b/src/components/Launcher/Launcher.astro
@@ -59,7 +59,7 @@ const translatePath = useTranslatedPath(lang);
       </ul>
     </div>
     <div class="pointer-coarse:hidden flex items-center gap-1 text-xs mx-auto w-fit pb-4">
-      utilise <Shortcut>↓</Shortcut> ou <Shortcut>↑</Shortcut>
+      {t("common.launcher.arrowShortcut")} <Shortcut>↓</Shortcut><Shortcut>↑</Shortcut>
     </div>
   </div>
 </LauncherOverlay>
