--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -31,7 +31,7 @@ const { title, metaTitle, metaDescription } = Astro.props
 <meta content="website" name="og:type" />
 <link rel="canonical" href={`${SITE_URL}${pathname}`} />
 <link rel="home" href={`${SITE_URL}`} />
-<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 <meta content="fr" name="og:locale" />
 <link rel="sitemap" href="/sitemap-index.xml" />
 <Schemas />
