(styles) : add the name of the socials in the socialLinks component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const articles = await getBlogCollection(lang);
 
 	<div class="mt-12 sm:mt-16">
         <h2 class="text-neutral-500 mb-6">[ Catch me if you can ]</h2>
-        <p>{t("home.contact.text")} <a href="mailto:victor.lebecq.pro@gmail.com" class="font-bold">mail</a>.</p>
+        <p class="!mt-0">{t("home.contact.text")} <a href="mailto:victor.lebecq.pro@gmail.com">mail</a>.</p>
         <SocialLinks />
 	</div>
 </Layout>
