--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -2,26 +2,26 @@
 
 ---
 
-<ul class="flex gap-8 w-fit mt-4">
-  <li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
+<ul class="group flex gap-8 w-fit mt-4">
+  <li class="transition-all ease-linear duration-300 group-hover:not-hover:opacity-20 hover:scale-95">
     <a href="https://github.com/pommito" class="flex gap-1.5 content-center" aria-label="Mon profil Github" target="_blank">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
       <span>Github</span>
     </a>
   </li>
-  <li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
+  <li class="transition-all ease-linear duration-300 group-hover:not-hover:opacity-20 hover:scale-95">
     <a href="https://www.linkedin.com/in/victor-lebecq" class="flex gap-1.5 content-center" aria-label="Mon profil Linkedin" target="_blank">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect width="4" height="12" x="2" y="9"/><circle cx="4" cy="4" r="2"/></svg>
       <span>Linkedin</span>
     </a>
   </li>
-  <li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
+  <li class="transition-all ease-linear duration-300 group-hover:not-hover:opacity-20 hover:scale-95">
     <a href="mailto:victor.lebecq.pro@gmail.com" class="flex gap-1.5 content-center" aria-label="Mon adresse email">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="4"/><path d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-4 8"/></svg>
       <span>Email</span>
     </a>
   </li>
-  <li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
+  <li class="transition-all ease-linear duration-300 group-hover:not-hover:opacity-20 hover:scale-95">
     <a href="https://www.instagram.com/dev.by.vic" class="flex gap-1.5 content-center" aria-label="Mon profil Instagram" target="_blank">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg>
       <span>Instagram</span>
