--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,24 +13,22 @@ const translatePath = useTranslatedPath(lang);
 <header class="mb-16 sm:mb-32">
   <div class="flex items-center justify-between">
     <a href={translatePath('/', lang)} class="">
-      <Image src={logo} alt="Logo de Victor Lebecq" width="100" height="100" class="size-6 object-cover object-center" />
+        <Image src={logo} alt="Logo de Victor Lebecq" width="100" height="100" class="size-6 object-cover object-center" />
     </a>
-    <nav>
-      <ul class="flex items-center gap-3 text-base/4 sm:gap-4">
-        <li class="p-1">
-          <LauncherButton />
-        </li>
-        <li class="p-1">
-            <a href={translatePath('/a-propos/', lang)} aria-label="Aller sur la page a propos">
-              <span>{t('common.nav.about')}</span>
+    <nav class="flex items-center gap-3 sm:gap-4">
+        <LauncherButton />
+        <ul class="flex items-center gap-3 text-base/4 sm:gap-4">
+            <li class="p-1">
+                <a href={translatePath('/a-propos/', lang)} aria-label="Aller sur la page a propos">
+                <span>{t('common.nav.about')}</span>
+                </a>
+            </li>
+            <li class="p-1">
+            <a href={translatePath('/blog/', lang)} aria-label="Aller sur le blog">
+                <span>{t('common.nav.blog')}</span>
             </a>
-        </li>
-        <li class="p-1">
-          <a href={translatePath('/blog/', lang)} aria-label="Aller sur le blog">
-            <span>{t('common.nav.blog')}</span>
-          </a>
-        </li>
-      </ul>
+            </li>
+        </ul>
     </nav>
   </div>
 </header>
