--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -40,12 +40,14 @@ const formatedDate = new Date(publishingDate).toLocaleDateString(`${lang}-${lang
   metaDescription="TODO : Add a meta description to the articles"
 >
   <h1 class="text-2xl">{title}</h1>
-	<h4 class="text-neutral-500">{t("blog.article.dateText")} {formatedDate}</h4>
-  <ul class="space-x-2 mt-2">
-    {tags.map((tag) => (
-      <Tag label={tag} />
-    ))}
-  </ul>
+  <h4 class="text-neutral-500">{t("blog.article.dateText")} {formatedDate}</h4>
+  {tags && (
+    <div class="space-x-1">
+      {tags.map((tag) => (
+        <Tag label={tag} />
+      ))}
+    </div>
+  )}
 
   <div id="article-content" class="group mt-12 sm:mt-16">
     <Content  />
