--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -17,7 +17,21 @@ const displayedEndDate = endDate === 'Present' ? 'Present' : new Date(endDate).t
 ---
 
 
-<div class="flex flex-col items-start rounded-xl gap-2 p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 sm:items-center sm:flex-row sm:gap-4">
+<div class="flex flex-col items-start rounded-xl gap-1 transition-all ease-in duration-300 group-hover:not-hover:opacity-20">
+    <div class="flex items-center justify-between w-full">
+        <div class="sm:flex sm:items-center">
+            <h3 class=""><a href={companyUrl} target="_blank">{company}</a></h3>
+            <span class="hidden sm:inline">・</span>
+            <h4 class="text-sm text-neutral-500 ">{title}</h4>
+        </div>
+        <span class="text-xs text-neutral-500 sm:ml-auto">{displayedStartDate} - {displayedEndDate}</span>
+    </div>
+    <p class="text-sm !mt-0">{description}</p>
+  </div>
+</div>
+
+
+<!-- <div class="flex flex-col items-start rounded-xl gap-2 p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 sm:items-center sm:flex-row sm:gap-4">
   <div class="size-16 bg-neutral-200 dark:bg-neutral-800 flex items-center justify-center rounded-lg overflow-hidden ">
     <Image src={companyLogo} alt="Logo de Victor Lebecq" width="100" height="100" class="w-full h-auto object-cover object-center" />
   </div>
@@ -32,4 +46,4 @@ const displayedEndDate = endDate === 'Present' ? 'Present' : new Date(endDate).t
       ))}
     </div>
   </div>
-</div>
+</div> -->
