(feat) : add a faded background to the bottom of the body

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -33,5 +33,5 @@ const formatedDate = new Date(publishingDate).toLocaleDateString(lang === 'fr' ?
       </div>
     )}
   </div>
-  <time datetime={formatedDate} class="text-sm"><span>{formatedDate}</span></time>
+  <time datetime={formatedDate} class="text-sm text-neutral-500"><span>{formatedDate}</span></time>
 </article>
