--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -24,10 +24,9 @@ const displayedEndDate = endDate === 'Present' ? 'Present' : new Date(endDate).t
             <span class="hidden sm:inline">・</span>
             <h4 class="text-sm text-neutral-500 ">{title}</h4>
         </div>
-        <span class="text-xs text-neutral-500 sm:ml-auto">{displayedStartDate} - {displayedEndDate}</span>
+        <span class="text-xs text-neutral-500">{displayedStartDate} - {displayedEndDate}</span>
     </div>
     <p class="text-sm !mt-0">{description}</p>
-  </div>
 </div>
 
 
