--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,9 @@
 ---
-import LanguagePicker from "./LanguagePicker.astro";
-
-
 const year = new Date().getFullYear();
 ---
 
-<footer class="flex items-center text-xs text-neutral-500 justify-between border-t border-neutral-200 dark:border-neutral-800 py-2 mt-16 sm:mt-32">
+<footer class="relative flex items-center text-xs text-neutral-500 justify-between border-t border-neutral-200 dark:border-neutral-800 py-2 mt-16 z-999 sm:mt-32">
   <span>© {year} Victor Lebecq</span>
-  <LanguagePicker />
   <button id="themeSwitcher" class="size-2 bg-neutral-900 dark:bg-neutral-100 rounded-full cursor-pointer transition-all ease-in-out duration-500 group-hover:scale-85" aria-label="Change le thème du site"></button>
 </footer>
 
