--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,16 @@
 ---
+import LanguagePicker from "./LanguagePicker.astro";
+
 const year = new Date().getFullYear();
 ---
 
 <footer class="relative flex items-center text-xs text-neutral-500 justify-between border-t border-neutral-200 dark:border-neutral-800 py-2 mt-16 z-999 sm:mt-32">
   <span>© {year} Victor Lebecq</span>
-  <button id="themeSwitcher" class="size-2 bg-neutral-900 dark:bg-neutral-100 rounded-full cursor-pointer transition-all ease-in-out duration-500 group-hover:scale-85" aria-label="Change le thème du site"></button>
+  <div class="flex items-center text-sm gap-1">
+    <button id="themeSwitcher" class="size-2 bg-neutral-900 dark:bg-neutral-100 rounded-full cursor-pointer transition-all ease-in-out duration-500 group-hover:scale-85" aria-label="Change le thème du site"></button>
+    <span>~</span>
+    <LanguagePicker />
+  </div>
 </footer>
 
 <script>
