--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ const translatePath = useTranslatedPath(lang);
 <header class="mb-16 sm:mb-32">
   <div class="flex items-center justify-between">
     <a href={translatePath('/', lang)} class="">
-        <Image src={logo} alt="Logo de Victor Lebecq" width="100" height="100" class="size-6 object-cover object-center" />
+        <Image src={logo} alt="Logo de Victor Lebecq" loading="eager" width="100" height="100" class="size-6 object-cover object-center" />
     </a>
     <nav class="flex items-center gap-3 sm:gap-4">
         <LauncherButton />
