--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,10 +5,11 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Launcher from '@/components/Launcher/Launcher.astro';
 import Seo from '@/components/Seo.astro';
+import Analytics from '@/components/Analytics.astro';
+import FadedBackground from '@/components/FadedBackground.astro';
 
 import { getLangFromUrl } from '../i18n/utils';
 import '../styles/global.css';
-import FadedBackground from '@/components/FadedBackground.astro';
 
 const { title, metaTitle, metaDescription } = Astro.props;
 
@@ -22,6 +23,7 @@ const lang = getLangFromUrl(Astro.url);
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<Seo title={title} metaTitle={metaTitle} metaDescription={metaDescription} />
+		<Analytics />
 		<script>
 			(function() {
       const savedTheme = localStorage.getItem('theme');
