--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -6,6 +6,8 @@ const lang = getLangFromUrl(Astro.url);
 const route = getRouteFromUrl(Astro.url);
 const translatePath = useTranslatedPath(lang);
 
+console.log('route', route);
+
 ---
 <ul class="flex gap-1 uppercase">
   {Object.entries(languages).map(([lang, label], index) => (
