(fix) : few changes before going prod

--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -7,7 +7,7 @@ type Props = {
 }
 
 const { experience } = Astro.props as Props;
-const { title, company, companyLogo, companyUrl, description, startDate, endDate, tags } = experience.data;
+const { title, company, companyUrl, description, startDate, endDate } = experience.data;
 
 const displayedStartDate = new Date(startDate).toLocaleDateString("fr-FR", { month: 'numeric', year: 'numeric' });
 const displayedEndDate = endDate === 'Present' ? 'Present' : new Date(endDate).toLocaleDateString("fr-FR", { month: 'numeric', year: 'numeric' });
