(fix) : upload a ne version of the about image

--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -6,7 +6,7 @@ import { getExperienceCollection } from "@/utils/collections";
 import Layout from "@/layouts/Layout.astro";
 import WorkExperience from "@/components/WorkExperience.astro";
 
-import image from "@/assets/about.jpg";
+import image from "@/assets/about.png";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
