(fix) : remove the cursor target of the fadedBackground component

--- a/src/components/FadedBackground.astro
+++ b/src/components/FadedBackground.astro
@@ -1,4 +1,4 @@
 ---
 ---
 
-<div class="fixed bottom-0 left-0 h-[15vh] w-full z-9 bg-gradient-to-t from-neutral-100 dark:from-neutral-900 to-transparent transform-none"></div>
+<div class="fixed bottom-0 left-0 h-[15vh] w-full z-9 bg-gradient-to-t from-neutral-100 dark:from-neutral-900 to-transparent transform-none pointer-events-none"></div>
