--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -38,10 +38,13 @@ const experiences = await getExperienceCollection(lang);
     <h2 class="text-neutral-500 mb-6">[ {t("about.tech.title")} ]</h2>
 	<p class="">{t("about.tech.text1")} </p>
     <p class="">{t("about.tech.text2")}</p>
-    <!-- <div class="flex items-center text-sm text-green-700 dark:text-green-400  gap-2 mt-6 w-fit px-3 py-2">
+    <div class="relative flex items-center text-sm text-green-700 dark:text-green-400  gap-2 mt-6 w-fit px-3 py-2">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="-ml-3"><path d="M7 20h10"/><path d="M10 20c5.5-2.5.8-6.4 3-10"/><path d="M9.5 9.4c1.1.8 1.8 2.2 2.3 3.7-2 .4-3.5.4-4.8-.3-1.2-.6-2.3-1.9-3-4.2 2.8-.5 4.4 0 5.5.8z"/><path d="M14.1 6a7 7 0 0 0-1.1 4c1.9-.1 3.3-.6 4.3-1.4 1-1 1.6-2.3 1.7-4.6-2.7.1-4 1-4.9 2z"/></svg>
-      <span>{t("about.tech.siteCarbon")}</span>
-    </div> -->
+      <a href="https://www.websitecarbon.com/website/victorlebecq-fr/" target="_blank">
+        {t("about.tech.siteCarbon")}
+        <span class="absolute inset-0"></span>
+      </a>
+    </div>
   </div>
 
 </Layout>
