(feat/plausible) : change to domain to match new installation

--- a/src/components/Analytics.astro
+++ b/src/components/Analytics.astro
@@ -1,4 +1,5 @@
 ---
 ---
 
-<script is:inline defer data-domain="victorlebecq.fr" src="https://analytics.victorlebecq.fr/js/script.outbound-links.js"></script>
+<script is:inline defer data-domain="victorlebecq.fr" src="https://analytics.digit-alp.fr/js/script.outbound-links.js"></script>
+<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
