(feat/seo) : change the og image to the new version

--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -1,7 +1,7 @@
 ---
 import Schemas from './Schemas.astro';
 
-import ogImage from '@/../public/assets/images/og-image.png';
+import ogImage from '@/../public/assets/images/dev_fullstack_chambery_grenoble.webp';
 
 type Props = {
   title: string;
