--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -5,12 +5,13 @@ import IconDigitalp from "@/content/projects/assets/icon_digitalp.svg"
 import IconWepeak from "@/content/projects/assets/icon_wepeak.svg"
 
 type Props = {
+  index: number;
   title: string;
   description: string;
   link: string;
 }
 
-const { title, description , link } = Astro.props as Props;
+const { index, title, description , link } = Astro.props as Props;
 let Illustration 
 
 switch (title) {
@@ -28,19 +29,21 @@ switch (title) {
     break;
 }
 
+const rotation = index % 2 === 0 ? `-rotate-${1 + index}` : "rotate-4";
+
 ---
 
-<div class="relative flex items-center rounded-xl gap-2 p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 group-hover:has-hover:scale-102 sm:gap-4">
-  <div class="size-12 text-neutral-500 dark:text-neutral-400 bg-neutral-900/2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2 flex items-center justify-center rounded-lg ">
-    <Illustration class="size-4" />
+<div class={`bg-neutral-900/2 dark:bg-white/5 text-center rounded-xl space-y-2 p-2 w-full aspect-square shadow-xl ${rotation} hover:rotate-0 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 group-hover:has-hover:scale-102`}>
+  <div class="w-full aspect-video text-neutral-500 dark:text-neutral-400 bg-neutral-900/2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2 flex items-center justify-center rounded-lg ">
+    <Illustration class="size-6" />
   </div>
   <div class="flex-1">
-    <h3 class="">
+    <h3>
       <a href={link}>
         <span class="absolute inset-0 z-10"></span>
         {title}
       </a>
     </h3>
-    <p class="!mt-0 text-sm">{description}</p>
+    <p class="!mt-0 text-xs text-neutral-500 dark:text-neutral-400">{description}</p>
   </div>
 </div>
