--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -29,13 +29,13 @@ switch (title) {
     break;
 }
 
-const rotation = index % 2 === 0 ? `-rotate-${1 + index}` : "rotate-4";
+const rotation = index % 2 === 0 ? `sm:-rotate-${1 + index}` : "sm:rotate-4";
 
 ---
 
-<div class={`relative bg-neutral-900/2 dark:bg-white/5 text-center rounded-xl space-y-2 p-2 w-full aspect-square shadow-xl ${rotation} hover:rotate-0 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 group-hover:has-hover:scale-102`}>
-  <div class="w-full aspect-video text-neutral-500 dark:text-neutral-400 bg-neutral-900/2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2 flex items-center justify-center rounded-lg ">
-    <Illustration class="size-6" />
+<div class={`relative flex items-center gap-2 rounded-xl p-2 -ml-2 w-full  ${rotation} transition-all ease-in duration-300 hover:rotate-0 group-hover:not-hover:opacity-20 group-hover:has-hover:scale-102 sm:flex-col sm:text-center sm:aspect-square sm:bg-neutral-900/2 sm:dark:bg-white/5 sm:shadow-xl`}>
+  <div class="w-12 aspect-square sm:w-full sm:aspect-video text-neutral-500 dark:text-neutral-400 bg-neutral-900/2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2 flex items-center justify-center rounded-lg ">
+    <Illustration class="size-4 sm:size-6" />
   </div>
   <div class="flex-1">
     <h3>
