--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const articles = await getBlogCollection(lang);
 
 	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500 mb-6">[ {t("home.project.title")} ]</h2>
-		<div class="group grid grid-cols-3 gap-6">
+		<div class="group grid grid-cols-1 sm:gap-6 sm:grid-cols-3">
 			{projects.map((project, i) => (
 				<ProjectCard index={i} title={project.data.title} description={project.data.description} link={project.data.link} />
 			))}
