(feat) : add description props to the article

--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -26,7 +26,7 @@ const { title, metaTitle, metaDescription } = Astro.props
 <meta content={metaDescription} name="twitter:description" />
 <meta name="twitter:image" content={`${SITE_URL}${ogImage.src}`} />
 <meta property="og:image" content={`${SITE_URL}${ogImage.src}`} />
-<meta content="Digit'Alp" name="og:site_name" />
+<meta content="Victor Lebecq - Développeur fullstack à Chambéry et Grenoble" name="og:site_name" />
 <meta content={SITE_URL} name="og:url" />
 <meta content="website" name="og:type" />
 <link rel="canonical" href={`${SITE_URL}${pathname}`} />
