--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -37,6 +37,7 @@ const formatedDate = new Date(publishingDate).toLocaleDateString(`${lang}-${lang
   title={`${title}・Victor Lebecq`}
   metaTitle={`${title} - Victor Lebecq`}
   metaDescription={description}
+  pageType="article"
 >
     <h1 class="text-2xl">{title}</h1>
     <h4 class="text-neutral-500">{t("blog.article.dateText")} {formatedDate}</h4>
