--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,8 +4,8 @@ import { ClientRouter } from 'astro:transitions';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Launcher from '@/components/Launcher/Launcher.astro';
-import Seo from '@/components/Seo.astro';
-import Analytics from '@/components/Analytics.astro';
+import Seo from '@/components/meta/Seo.astro';
+import Analytics from '@/components/meta/Analytics.astro';
 import FadedBackground from '@/components/FadedBackground.astro';
 
 import { getLangFromUrl } from '../i18n/utils';
