--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -50,7 +50,7 @@ const formatedDate = new Date(publishingDate).toLocaleDateString(`${lang}-${lang
     </div>
     )}
 
-    <!-- <Toc headings={headings} /> -->
+    <Toc headings={headings} />
 
     <div id="article-content" class="group mt-12 sm:mt-16">
         <Content  />
