(style) : add smooth scroll the the html and body

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,11 @@
 
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
+html,
+body {
+    @apply scroll-smooth;
+}
+
 p {
     @apply mt-6 font-light text-pretty;
 }
