(feat) : add a noise background to the website

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,7 @@ import FadedBackground from '@/components/FadedBackground.astro';
 
 import { getLangFromUrl } from '../i18n/utils';
 import '../styles/global.css';
+import NoiseBackground from '@/components/NoiseBackground.astro';
 
 const { title, metaTitle, metaDescription, pageType } = Astro.props;
 
@@ -40,12 +41,14 @@ const lang = getLangFromUrl(Astro.url);
 		data-modal="close"
 		class="bg-neutral-100 font-sans font-medium text-neutral-900 dark:bg-neutral-900 dark:text-neutral-100 overflow-auto data-[modal=open]:overflow-hidden data-[modal=open]:overscroll-contain data-[modal=open]:pointer-events-none data-[modal=open]:!mr-[15px]"
 	>
+
 		<div class="mx-auto max-w-3xl overflow-x-hidden px-4 pt-12 antialiased sm:px-6 sm:pt-16 md:overflow-x-visible">
 			<Header />
 			<slot />
 			<Footer />
 		</div>
 		<Launcher />
+		<NoiseBackground />
 		<FadedBackground />
 	</body>
 
