--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,6 +19,20 @@ body {
     @apply scroll-smooth;
 }
 
+body::after {
+    filter: url(#grainy);
+    opacity: 20%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    content: '';
+    color: #aeae9d;
+    pointer-events: none;
+    z-index: -1;
+}
+
 p {
     @apply mt-6 font-light text-pretty;
 }
