(style) : remove bottom faded background

--- a/src/components/NoiseBackground.astro
+++ b/src/components/NoiseBackground.astro
@@ -1,1 +1,6 @@
-<svg class="pointer-events-none absolute cursor-none"><filter id="grainy"><feTurbulence type="turbulence" baseFrequency="0.5"></feTurbulence><feColorMatrix type="saturate" values="0"></feColorMatrix></filter></svg>
+<svg class="pointer-events-none absolute cursor-none">
+  <filter id="grainy">
+    <feTurbulence type="turbulence" baseFrequency="0.4"></feTurbulence>
+    <feColorMatrix type="saturate" values="0"></feColorMatrix>
+  </filter>
+</svg>
