--- a/src/components/ui/Tag.astro
+++ b/src/components/ui/Tag.astro
@@ -6,4 +6,4 @@ type Propos = {
 const { label } = Astro.props as Propos;
 ---
 
-<span class="inline-block text-xs/4 text-neutral-500 dark:text-neutral-400 rounded bg-neutral-900/2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2  py-1 px-2">{label}</span>
+<span class="inline-block text-xs/4 text-neutral-500 dark:text-neutral-400 rounded bg-neutral-100 dark:bg-neutral-800 inset-ring inset-ring-neutral-950/8 dark:inset-ring-white/2  py-1 px-2">{label}</span>
