(fix) : noise background is now in absolute position

--- a/src/components/NoiseBackground.astro
+++ b/src/components/NoiseBackground.astro
@@ -1,4 +1,4 @@
-<svg class="pointer-events-none absolute cursor-none">
+<svg class="absolute pointer-events-none cursor-none">
   <filter id="grainy">
     <feTurbulence type="turbulence" baseFrequency="0.3"></feTurbulence>
     <feColorMatrix type="saturate" values="0"></feColorMatrix>
