--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,14 +19,11 @@ body {
     @apply scroll-smooth;
 }
 
-body::after {
+body::before {
     filter: url(#grainy);
     opacity: 15%;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+    inset: 0;
     content: '';
     pointer-events: none;
     z-index: -1;
