(chore) : change to plausible domain name to the new one

--- a/src/components/meta/Analytics.astro
+++ b/src/components/meta/Analytics.astro
@@ -1,5 +1,2 @@
----
----
-
-<script is:inline defer data-domain="victorlebecq.fr" src="https://analytics.digit-alp.fr/js/script.outbound-links.js"></script>
+<script defer data-domain="victorlbq.fr" src="https://analytics.digit-alp.fr/js/script.outbound-links.js"></script>
 <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
