--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -7,6 +7,7 @@ import Layout from "@/layouts/Layout.astro";
 import WorkExperience from "@/components/WorkExperience.astro";
 
 import image from "@/assets/about.png";
+import Section from "@/components/Section.astro";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -25,18 +26,16 @@ const experiences = await getExperienceCollection(lang);
   <p>{t("about.text2")}</p>
   <Image src={image} alt={t("about.imageAlt")} width="1280" height="720" class="relative mt-6 rounded z-10" />
 
-  <div class="mt-12 sm:mt-16">
-    <h2 class="text-neutral-500 mb-6">[ {t("about.experience.title")} ]</h2>
+  <Section title={t("about.experience.title")}>
     <div class="space-y-4">
-        {experiences.map((experience) => (
-          <WorkExperience experience={experience} />
-        ))}
+      {experiences.map((experience) => (
+        <WorkExperience experience={experience} />
+      ))}
     </div>
-  </div>
+  </Section>
 
-  <div class="mt-12 sm:mt-16">
-    <h2 class="text-neutral-500 mb-6">[ {t("about.tech.title")} ]</h2>
-	<p class="">{t("about.tech.text1")} </p>
+  <Section title={t("about.tech.title")} >
+    <p class="">{t("about.tech.text1")} </p>
     <p class="">{t("about.tech.text2")}</p>
     <div class="relative flex items-center text-sm text-green-700 dark:text-green-400  gap-2 mt-6 w-fit px-3 py-2">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="-ml-3"><path d="M7 20h10"/><path d="M10 20c5.5-2.5.8-6.4 3-10"/><path d="M9.5 9.4c1.1.8 1.8 2.2 2.3 3.7-2 .4-3.5.4-4.8-.3-1.2-.6-2.3-1.9-3-4.2 2.8-.5 4.4 0 5.5.8z"/><path d="M14.1 6a7 7 0 0 0-1.1 4c1.9-.1 3.3-.6 4.3-1.4 1-1 1.6-2.3 1.7-4.6-2.7.1-4 1-4.9 2z"/></svg>
@@ -45,6 +44,6 @@ const experiences = await getExperienceCollection(lang);
         <span class="absolute inset-0"></span>
       </a>
     </div>
-  </div>
+  </Section>
 
 </Layout>
