--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -4,10 +4,10 @@ import { getLangFromUrl, useTranslations } from '../i18n/utils';
 import { getExperienceCollection } from "@/utils/collections";
 
 import Layout from "@/layouts/Layout.astro";
+import Section from "@/components/ui/Section.astro";
 import WorkExperience from "@/components/WorkExperience.astro";
 
 import image from "@/assets/about.png";
-import Section from "@/components/Section.astro";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
